# user-service

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
entity/: Cargo.toml
entity/src/: user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250224_015652_create_user_table.rs  m20250224_231932_add_user_username.rs
src/: main.rs
src/helpers/: auth.rs  users.rs
