[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
axum = { version = "0.8.1" }
headers = "0.4.0"
tokio = { version = "1.43.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs", "trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
futures = "0.3.31"
sea-orm = { version = "1.1.6", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.12", features = ["json"] }
tokio-util = "0.7.13"
chrono = "0.4.39"

[workspace]
members = [".", "entity", "migration"]
